backport java-support to jdk 8