@@ -18,6 +18,7 @@
 package net.shibboleth.utilities.java.support.httpclient;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
 import javax.annotation.Nonnull;
@@ -81,7 +82,7 @@ class ContextHandlingHttpClient extends CloseableHttpClient {
      * @param client the wrapped client instance
      */
     public ContextHandlingHttpClient(@Nonnull final CloseableHttpClient client) {
-        this(client, List.of());
+        this(client, Collections.emptyList());
     }
 
     /**
